--- a/CGProject.cbp
+++ b/CGProject.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="ZavrsniProjekat" />
+		<Option title="CGProject" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/ZavrsniProjekat" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/CGProject" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="C:/Program Files (x86)/CodeBlocks/MinGW/bin" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
@@ -18,7 +18,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/ZavrsniProjekat" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/CGProject" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="C:/Program Files (x86)/CodeBlocks/MinGW/bin" />
 				<Option object_output="obj/Release/" />
 				<Option type="0" />
